# note

./: .clang-tidy  .clangd  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROBLEM.md  PROGRESS.md
app/: CMakeLists.txt
app/src/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/: core.hpp  paths.hpp
libs/core/src/: core.cpp  paths.cpp
tests/: CMakeLists.txt
tests/core/: core_test.cpp  paths_test.cpp
